# electricity-agent

./: .gitignore  QUICK_START.md  README.md  STREAMLIT_README.md  architecture.md  chat_app.py  mcp_server.py  pyproject.toml  requirements.txt  run_agent.py  run_chat.py  run_streamlit.py  setup.py  streamlit_app.py  streamlit_requirements.txt  test_agent.py  test_all_tools.py  test_mcp_server.py
.kiro/specs/electricity-market-agent/: design.md  requirements.md  tasks.md
config/: .env.example
src/: __init__.py
src/agents/: __init__.py  electricity_agent.py  electricity_agent_old.py
src/tools/: __init__.py  entsoe_tool.py
