[project]
name = "electricity-agent"
version = "1.0.0"
description = "European Electricity Market Analysis Agent using ENTSOE data"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=1.2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
    "anthropic>=0.58.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "boto3>=1.28.0",
    "botocore[crt]>=1.31.0",
    "mcp[cli]>=1.12.3",
]

[project.optional-dependencies]
streamlit = [
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
]

[project.scripts]
electricity-agent = "src.agents.electricity_agent:main"
mcp-server = "mcp_server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
